Fixed z-index on map

--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@
         height: 400px;
         width: 100%;
         position: relative;
-        z-index: -1;
+        z-index: 0;
     }
 
     #contact {
